@@ -65,7 +65,8 @@ my $operators = {
     'ABS' => [ 1, sub{ abs($_[0]); } ],
     'NOW' => [ 0, sub{ time(); } ],
     'DUP' => [ 1, sub{ ($_[0], $_[0]);} ],
-    'EXC' => [ 2, sub{ ($_[1], $_[0]); } ]
+    'EXC' => [ 2, sub{ ($_[1], $_[0]); } ],
+    'NUM' => [ 1, sub{ defined($_[0]) ? $_[0] : 0; }, 1 ]
 };
 
 
